[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/UI/LevelEndMenu.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 586.0
margin_top = 317.0
margin_right = 693.0
margin_bottom = 403.0

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 107.0
margin_bottom = 14.0
text = "Congratulations !"

[node name="ButtonNextLevel" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 107.0
margin_bottom = 38.0
text = "Next level"

[node name="ButtonRestartLevel" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 42.0
margin_right = 107.0
margin_bottom = 62.0
text = "Restart level"

[node name="ButtonMainMenu" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 66.0
margin_right = 107.0
margin_bottom = 86.0
text = "Main menu"
